# DemoPicoHC06BT

./: CMakeLists.txt  DemoPicoHC06BT.c  README.md  test-btconn.sh
client/DemoPicoClient/: conn-led.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  show-led.sh  style.qss
